Fixed list padding too large.

--- a/source/css/obsidian.styl
+++ b/source/css/obsidian.styl
@@ -3049,7 +3049,7 @@ h1.title {
       list-style: none;
       margin: 5px 0;
       position: relative;
-      padding: 1em;
+      padding: 0 0 0 1em;
 
       &:before {
         position: absolute;
